# codex-usage

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  cli.mjs  docker-compose.yml  index.d.ts  index.js  package.json  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  docker.yml  npm.yaml  pypi.yaml  pypi.yml
python/codex_usage/: __init__.py
release/codex-usage-x86_64-apple-darwin/: codex-usage
scoop/: codex-usage.json
scripts/: build-deb.sh  build-rpm.sh  build-source.sh  verify-npm-optional-deps.mjs
src/: history.rs  lib.rs  main.rs
src/schedule/: config.rs  mod.rs  parse.rs
src/schedule/platform/: macos.rs  mod.rs  unix.rs  windows.rs
test/: verify-npm-optional-deps.test.mjs
