[package]
name = "codex-usage"
version = "0.1.3"
edition = "2021"
description = "CLI tool to track OpenAI Codex usage with multi-account support"
authors = ["Liam Deacon <liam@deacon.dev>"]
license = "MIT"
repository = "https://github.com/Liam-Deacon/codex-usage"
rust-version = "1.77"

[lib]
name = "codex_usage_lib"
# cdylib is required for PyO3 Python bindings; the rlib is always needed for CLI
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "codex-usage"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "5.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
ctrlc = "3.2"
rusqlite = { version = "0.32", features = ["bundled"] }
ratatui = "0.28"
pyo3 = { version = "0.20", optional = true }
napi = { version = "3", optional = true, default-features = false, features = ["napi9"] }
napi-derive = { version = "3", optional = true }

[build-dependencies]
napi-build = { version = "2", optional = true }

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
notify-rust = "4.11"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.7"
nix = { version = "0.29", features = ["user"] }

[target.'cfg(windows)'.dependencies]
sysinfo = "0.32"
windows = { version = "0.58", features = ["Win32_System_Threading", "Win32_Foundation"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3"

[features]
default = []
pyo3 = ["dep:pyo3", "pyo3/extension-module", "pyo3/abi3-py38"]
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
