[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "codex-usage"
version = "0.1.0"
description = "CLI tool to track OpenAI Codex usage with multi-account support"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Liam Deacon", email = "liam@deacon.dev"}
]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
codex-usage = "codex_usage:run"

[tool.maturin]
features = ["pyo3"]
python-source = "src"
module-name = "codex_usage"

[tool.cibuildwheel]
# cibuildwheel configuration for maturin-based builds
build = "cp38-manylinux* cp38-macosx* cp38-win*"
skip = "*-musllinux*"
manylinux-images = { x86_64 = "manylinux2014", aarch64 = "manylinux2014" }

[[tool.cibuildwheel.test]]
# Don't run tests during wheel build (Rust tests run separately)
skip = true
