[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "codex-usage"
version = "0.1.0"
description = "CLI tool to track OpenAI Codex usage with multi-account support"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Liam Deacon", email = "liam@deacon.dev"}
]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
codex-usage = "codex_usage:run_py"

[tool.maturin]
features = ["pyo3"]
module-name = "codex_usage"

[tool.cibuildwheel]
# cibuildwheel configuration for maturin-based builds
build = "cp38-manylinux* cp39-manylinux* cp310-manylinux* cp311-manylinux* cp38-macosx* cp39-macosx* cp310-macosx* cp311-macosx* cp38-win* cp39-win* cp310-win* cp311-win*"
skip = "*-musllinux*"
manylinux-images = { x86_64 = "manylinux2014", aarch64 = "manylinux2014" }
